--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
       </section>
 
       <div class="photo-grid">
-        <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="окно поезда">
+        <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="деревья за окном поезда">
         <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="над горами">
         <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt=" собака на стоге сена">
         <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="лес в тумане">
-        <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="машина на льду озера">
-        <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="прилив">
-        <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="горы">
-        <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="">
-        <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="">
-        <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="">
-        <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="">
-        <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="">
+        <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="уаз-буханка на льду озера">
+        <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="прилив Байкала">
+        <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Эльбрус">
+        <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="прибрежная полоса">
+        <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="горы в тумане">
+        <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="гора на Камчатке">
+        <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="мыс над Байкалом">
+        <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="туман в горах Ергаки">
       </div>
 
 
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <img src="images/place-kosa.jpg" alt="" class="place__image">
+          <img src="images/place-kosa.jpg" alt="куршская коса" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="#">park-kosa.ru</a>
+            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
             горизонта &#8212; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
@@ -109,10 +109,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <img src="images/place-kolsky.jpg" alt="" class="place__image">
+          <img src="images/place-kolsky.jpg" alt="горы в снегу" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="#">National Geographic</a>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
             которой на юг &#8212;
@@ -130,10 +130,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <img src="images/place-altai.jpg" alt="" class="place__image">
+          <img src="images/place-altai.jpg" alt="ноутбук на фоне леса" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="#">Facebook</a>
+            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
@@ -148,10 +148,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <img src="images/place-winter-baikal.jpg" alt="" class="place__image">
+          <img src="images/place-winter-baikal.jpg" alt="лед Байкала" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="#">https://vk.com/baikalmile</a>
+            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
@@ -166,10 +166,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <img src="images/place-karelia.jpg" alt="" class="place__image">
+          <img src="images/place-karelia.jpg" alt="река в Карелии" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="#">http://vodlozero.ru/</a>
+            <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
             сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров &#8212;
@@ -183,7 +183,7 @@
 
       <section class="cover">
 
-        <a class="cover__title_link" href="#">
+        <a class="cover__title_link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала<br>"на собаках"</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе - путешествие от столицы до Байкала на
             электричках</p>
@@ -194,11 +194,11 @@
     </main>
     <footer class="footer">
       <nav class="footer__links">
-        <a class="footer__link" href="#">Карты</a>
-        <a class="footer__link" href="#">Погода</a>
-        <a class="footer__link" href="#">Расписание</a>
-        <a class="footer__link" href="#">Календарь</a>
-        <a class="footer__link" href="#">Путешествие</a>
+        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru">Путешествие</a>
       </nav>
       <div class="footer__copyright">&copy; 2021. Безденежных Егор</div>
 
