--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
       <section class="cover">
 
         <a class="cover__title_link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <h2 class="cover__title">До Байкала<br>"на собаках"</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе - путешествие от столицы до Байкала на
+          <h2 class="cover__title">До Байкала<br>&laquo;на собаках&raquo;</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе &#8212; путешествие от столицы до Байкала на
             электричках</p>
         </a>
         <img class="cover__background" src="images/cover-trains.jpg" alt="">
