--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Путешествие по России</title>
+  <title>Путешествия по России</title>
   <base target="_blank">
   <link rel="stylesheet" href="pages/index.css">
 </head>
@@ -48,7 +48,7 @@
     <main class="content">
 
       <section class="lead">
-        <h1 class="lead__title">Путешествие по России</h1>
+        <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="images/lead-polka.jpg" alt="плацкартная полка">
         <p class="lead__caption">ваша полка &#8212; верхняя</p>
