--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Путешествия по России</title>
+  <title>Путешествие по России</title>
   <base target="_blank">
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
-      <div class="logo">
-        <svg width="177" height="52" viewBox="0 0 177 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class="header__logo">
+        <svg viewBox="0 0 177 52" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M7.79073 23.3826L10.4447 22.0738L14.6397 15.7919L15.9239 15.2685L17.2937 21.6376L15.4958 21.8993L14.126 19.2819L13.0987 23.3826H17.6361L22.3448 24.604L24.2283 23.3826L27.396 26.698L28.7658 20.5906L30.9917 22.8591L32.3615 20.9396L34.5874 20.3289L37.8407 17.2752L38.3543 15.7919L41.0083 16.2282L42.1213 17.7114L40.1522 21.8993L45.0321 19.3691V18.1476L46.9156 17.7114L48.9703 19.8054L51.025 17.2752V15.5302L54.3639 13.1745L55.7337 11.1678H57.874L61.6409 3.40268L64.8942 0L66.0927 1.91946L64.2093 4.36242L64.8942 5.93289L66.692 6.28188L68.1474 12.7383V18.1476L70.7158 21.7248L72 26.698L67.5482 23.8188L65.5791 15.5302L64.3805 15.7919L64.2093 21.3758L60.956 26.698L60.0143 34.8121L62.2402 35.3356L63.1819 34.2013L65.3222 36.6443L66.9489 43.9732L66.7776 48.6846H64.723L63.9524 42.0537L62.497 44.0604L59.3294 43.3624L56.761 41.1812L53.8502 42.2282L54.0214 46.9396L51.7099 47.5503L48.2854 50.1678L44.176 49.6443L42.5494 48.6846L39.981 49.1208L40.8371 50.1678L38.7824 51.3893L37.1558 50.604L34.0737 52L29.365 49.6443L27.5672 45.4564L26.0262 45.6309L24.2283 44.1477L24.1427 43.0134L18.4067 42.4027L17.4649 45.5436L13.8692 43.8859L12.0713 40.8322H8.21879L7.79073 45.7181L5.5648 46.4161L4.45184 50.8658L3.59572 50.0805L0 40.745L4.28062 38.651L3.59572 34.5503L2.91082 30.3624L4.79429 27.6577L4.19501 26L6.76338 23.2081L7.79073 23.3826ZM64.723 33.6779L68.6611 39.6107L69.9453 39.0872L68.3187 36.6443L64.723 32.8054V33.6779ZM24.4851 21.6376V19.8926L27.4816 17.7114L30.0499 16.4027H27.0535L24.3995 17.9732L22.7729 19.4564V21.6376H24.4851Z"
             fill="white" />
@@ -39,21 +39,21 @@
         </svg>
 
       </div>
-      <div class="lang-links">
-        <a class="lang-link" href="#">Ru</a>
-        <a class="lang-link" href="#">En</a>
+      <div class="header__lang-links">
+        <a class="header__lang-link" href="#">Ru</a>
+        <a class="header__lang-link" href="#">En</a>
       </div>
     </header>
 
     <main class="content">
-
+    
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="images/lead-polka.jpg" alt="плацкартная полка">
         <p class="lead__caption">ваша полка &#8212; верхняя</p>
       </section>
-
+  
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
@@ -72,7 +72,7 @@
         </ul>
       </section>
 
-      <div class="photo-grid">
+      <section class="photo-grid">
         <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="деревья за окном поезда">
         <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="над горами">
         <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt=" собака на стоге сена">
@@ -85,22 +85,23 @@
         <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="гора на Камчатке">
         <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="мыс над Байкалом">
         <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="туман в горах Ергаки">
-      </div>
+      </section>
 
 
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <img src="images/place-kosa.jpg" alt="куршская коса" class="place__image">
+
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
-          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-            горизонта &#8212; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
-            моря с другой. Уникальная природная зона на краю российского анклава.
-            <br>
-            <br>
+          <img src="images/place-kosa.jpg" alt="куршская коса" class="place__image">
+          <p class="place__paragraph">
+            <span class="place__paragraph_break">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+              горизонта &#8212; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
+              моря с другой. Уникальная природная зона на краю российского анклава.
+            </span>
             На этом Калининградская область не заканчивается. Для путешественника и
             исследователя там же по соседству &#8212; самая западная точка России, Балтийская коса, &#8212; и немецкое
             наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
@@ -109,16 +110,18 @@
         </div>
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <img src="images/place-kolsky.jpg" alt="горы в снегу" class="place__image">
+
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
+              Geographic</a>
           </div>
-          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
-            которой на юг &#8212;
-            тайга, а на север &#8212; Ледовитый океан, прикидывающийся Баренцевым морем.
-            <br>
-            <br>
+          <img src="images/place-kolsky.jpg" alt="горы в снегу" class="place__image">
+          <p class="place__paragraph">
+            <span class="place__paragraph_break">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+              которой на юг &#8212;
+              тайга, а на север &#8212; Ледовитый океан, прикидывающийся Баренцевым морем.
+            </span>
             Возможно, вы смотрели Звягинцева и даже слышали историю
             арктического
             фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
@@ -130,17 +133,18 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <img src="images/place-altai.jpg" alt="ноутбук на фоне леса" class="place__image">
+
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
-          <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
-            горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
-            чудом здешних мест &#8212; горным воздухом.
-            <br>
-            <br>
+          <img src="images/place-altai.jpg" alt="ноутбук на фоне леса" class="place__image">
+          <p class="place__paragraph">
+            <span class="place__paragraph_break">Алтай — одно из красивейших мест в России.
+              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+              горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
+              чудом здешних мест &#8212; горным воздухом.
+            </span>
             Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
             разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
             равнинах пасутся косули. И знаменитые манулы &#8212; тоже обитатели Алтайского края.
@@ -148,16 +152,17 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <img src="images/place-winter-baikal.jpg" alt="лед Байкала" class="place__image">
+
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
-          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
-            мест в России.
-            <br>
-            <br>
+          <img src="images/place-winter-baikal.jpg" alt="лед Байкала" class="place__image">
+          <p class="place__paragraph">
+            <span class="place__paragraph_break">Всем известен Байкал как крупнейшее озеро
+              в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
+              мест в России.
+            </span>
             Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это
             такой вид спорта, когда лыжник привязывает себя
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
@@ -166,11 +171,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <img src="images/place-karelia.jpg" alt="река в Карелии" class="place__image">
+
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
+          <img src="images/place-karelia.jpg" alt="река в Карелии" class="place__image">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
             сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров &#8212;
             леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
@@ -183,7 +189,7 @@
 
       <section class="cover">
 
-        <a class="cover__title_link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала<br>&laquo;на собаках&raquo;</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе &#8212; путешествие от столицы до Байкала на
             электричках</p>
@@ -192,6 +198,7 @@
 
       </section>
     </main>
+
     <footer class="footer">
       <nav class="footer__links">
         <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
@@ -203,6 +210,7 @@
       <div class="footer__copyright">&copy; 2021. Безденежных Егор</div>
 
     </footer>
+
   </div>
 
 </body>
