--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
           в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
           интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов <span class="intro__list_count">11</span></li>
-          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_count">12</span></li>
-          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_count">16</span></li>
-          <li>Пририодных заповедников <span class="intro__list_count">105</span></li>
-          <li>Аэропортов <span class="intro__list_count">241</span></li>
+          <li>Часовых поясов <span class="intro__list-count">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-count">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-count">16</span></li>
+          <li>Пририодных заповедников <span class="intro__list-count">105</span></li>
+          <li>Аэропортов <span class="intro__list-count">241</span></li>
         </ul>
       </section>
 
@@ -98,7 +98,7 @@
           </div>
           <img src="images/place-kosa.jpg" alt="куршская коса" class="place__image">
           <p class="place__paragraph">
-            <span class="place__paragraph_break">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+            <span class="place__paragraph-break">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта &#8212; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
               моря с другой. Уникальная природная зона на краю российского анклава.
             </span>
@@ -118,7 +118,7 @@
           </div>
           <img src="images/place-kolsky.jpg" alt="горы в снегу" class="place__image">
           <p class="place__paragraph">
-            <span class="place__paragraph_break">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+            <span class="place__paragraph-break">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
               которой на юг &#8212;
               тайга, а на север &#8212; Ледовитый океан, прикидывающийся Баренцевым морем.
             </span>
@@ -140,7 +140,7 @@
           </div>
           <img src="images/place-altai.jpg" alt="ноутбук на фоне леса" class="place__image">
           <p class="place__paragraph">
-            <span class="place__paragraph_break">Алтай — одно из красивейших мест в России.
+            <span class="place__paragraph-break">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
               горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
               чудом здешних мест &#8212; горным воздухом.
@@ -159,7 +159,7 @@
           </div>
           <img src="images/place-winter-baikal.jpg" alt="лед Байкала" class="place__image">
           <p class="place__paragraph">
-            <span class="place__paragraph_break">Всем известен Байкал как крупнейшее озеро
+            <span class="place__paragraph-break">Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
               мест в России.
             </span>
