--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="/images/header-logo.svg" alt="иконка с картой России">
+      <img class="header__logo" src="images/header-logo.svg" alt="иконка с картой России">
       <div class="header__lang-links">
         <a class="header__lang-link" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
