--- a/index.html
+++ b/index.html
@@ -163,14 +163,11 @@
       </section>
 
       <section class="cover">
-
-        <a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__title-link page__background" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе &#8212; путешествие от столицы до Байкала на
             электричках</p>
         </a>
-        <img class="cover__background" src="images/cover-trains.jpg" alt="">
-
       </section>
     </main>
 
