--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
   <div class="page">
     <header class="header">
       <img class="header__logo" src="images/header-logo.svg" alt="иконка с картой России">
-      <div class="header__lang-links">
-        <a class="header__lang-link" href="#">Ru</a>
-        <a class="header__lang-link" href="#">En</a>
-      </div>
+      <ul class="header__lang-links">
+        <li class="header__lang-name">
+          <a class="header__lang-link" href="#" target="_self">Ru</a>
+        </li>
+        <li class="header__lang-name">
+          <a class="header__lang-link" href="#" target="_self">En</a>
+        </li>
+      </ul>
     </header>
 
     <main class="content">
@@ -30,13 +34,17 @@
       </section>
 
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
-          планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
-          &#8212; это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А
-          ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
-          Как, например, Вера Башмакова &#8212; смелая молодая мама, которая взяла в охапку троих детей, усадила их
-          в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
+        <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+        <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36%
+          планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом
+          деле, Россия
+          &mdash;&nbsp;это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато
+          Путорана. А
+          ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов.
+          Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей,
+          усадила их
+          в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали
+          и&nbsp;описали некоторые
           интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
           <li>Часовых поясов <span class="intro__list-count">11</span></li>
@@ -64,102 +72,111 @@
 
 
       <section class="places">
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Куршская коса</h2>
-
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img src="images/place-kosa.jpg" alt="куршская коса" class="place__image">
-          <p class="place__paragraph">
-            <span class="place__paragraph-break">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+          <ul class="place__paragraph">
+            <li class="place__paragraph-text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта &#8212; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
               моря с другой. Уникальная природная зона на краю российского анклава.
-            </span>
-            На этом Калининградская область не заканчивается. Для путешественника и
-            исследователя там же по соседству &#8212; самая западная точка России, Балтийская коса, &#8212; и немецкое
-            наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
-            спокойствие природы и запах стального, прохладного моря.
-          </p>
-        </div>
-        <div class="place">
-          <h2 class="place__title">Кольский</h2>
+            </li>
+            <li class="place__paragraph-text">
+              На этом Калининградская область не заканчивается. Для путешественника и
+              исследователя там же по соседству &#8212; самая западная точка России, Балтийская коса, &#8212; и немецкое
+              наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
+              спокойствие природы и запах стального, прохладного моря.
+            </li>
+          </ul>
+        </article>
 
+        <article class="place">
+          <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
               Geographic</a>
           </div>
           <img src="images/place-kolsky.jpg" alt="горы в снегу" class="place__image">
-          <p class="place__paragraph">
-            <span class="place__paragraph-break">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+          <ul class="place__paragraph">
+            <li class="place__paragraph-text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
               которой на юг &#8212;
               тайга, а на север &#8212; Ледовитый океан, прикидывающийся Баренцевым морем.
-            </span>
-            Возможно, вы смотрели Звягинцева и даже слышали историю
-            арктического
-            фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
-            уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
-            скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние
-            начинает сбываться с билетом
-            в Мурманск.
-          </p>
-        </div>
-        <div class="place">
-          <h2 class="place__title">Алтай</h2>
+            </li>
+            <li class="place__paragraph-text">Возможно, вы смотрели Звягинцева и даже слышали историю
+              арктического
+              фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
+              уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
+              скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние
+              начинает сбываться с билетом
+              в Мурманск.
+            </li>
+          </ul>
+        </article>
 
+        <article class="place">
+          <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <img src="images/place-altai.jpg" alt="ноутбук на фоне леса" class="place__image">
-          <p class="place__paragraph">
-            <span class="place__paragraph-break">Алтай — одно из красивейших мест в России.
+          <ul class="place__paragraph">
+            <li class="place__paragraph-text">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
               горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
               чудом здешних мест &#8212; горным воздухом.
-            </span>
-            Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
-            разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
-            равнинах пасутся косули. И знаменитые манулы &#8212; тоже обитатели Алтайского края.
-          </p>
-        </div>
-        <div class="place">
-          <h2 class="place__title">Зимний Байкал</h2>
+            </li>
+            <li class="place__paragraph-text">
+              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
+              разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
+              равнинах пасутся косули. И знаменитые манулы &#8212; тоже обитатели Алтайского края.
+            </li>
+          </ul>
+        </article>
 
+        <article class="place">
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img src="images/place-winter-baikal.jpg" alt="лед Байкала" class="place__image">
-          <p class="place__paragraph">
-            <span class="place__paragraph-break">Всем известен Байкал как крупнейшее озеро
+          <ul class="place__paragraph">
+            <li class="place__paragraph-text">
+              Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
-              мест в России.
-            </span>
-            Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это
-            такой вид спорта, когда лыжник привязывает себя
-            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
-            фестивале «Байкальская миля» был поставлен мировой рекорд &#8212; 197.011 км/ч.
-          </p>
-        </div>
-        <div class="place">
-          <h2 class="place__title">Карелия</h2>
+              мест в России.</li>
+            <li class="place__paragraph-text">
+              Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это
+              такой вид спорта, когда лыжник привязывает себя
+              к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
+              фестивале «Байкальская миля» был поставлен мировой рекорд &#8212; 197.011 км/ч.
+            </li>
+          </ul>
+        </article>
 
+        <article class="place">
+          <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img src="images/place-karelia.jpg" alt="река в Карелии" class="place__image">
-          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-            сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров &#8212;
-            леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
-            соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
-            чем увидал его Иван Грозный.
-            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-        </div>
+          <ul class="place__paragraph">
+            <li class="place__paragraph-text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+              сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров &#8212;
+              леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
+              соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
+              чем увидал его Иван Грозный.
+              В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+              в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+            </li>
+          </ul>
+        </article>
       </section>
 
       <section class="cover">
@@ -172,14 +189,16 @@
     </main>
 
     <footer class="footer">
-      <nav class="footer__links">
-        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-        <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-        <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-        <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-        <a class="footer__link" href="https://travel.yandex.ru">Путешествие</a>
+      <nav>
+        <ul class="footer__links">
+          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествие</a></li>
+        </ul>
       </nav>
-      <div class="footer__copyright">&copy; 2021. Безденежных Егор</div>
+      <p class="footer__copyright">&copy; 2021. Безденежных Егор</p>
 
     </footer>
 
