--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
+<!-- Спасибо за комментарии! -->
+
+
+
 <body class="body">
   <div class="page">
     <header class="header">
       <img class="header__logo" src="images/header-logo.svg" alt="иконка с картой России">
       <ul class="header__lang-links">
         <li class="header__lang-name">
-          <a class="header__lang-link" href="#" target="_self">Ru</a>
+          <a class="header__lang-link lang__active_ru" href="#" target="_self">Ru</a>
         </li>
         <li class="header__lang-name">
-          <a class="header__lang-link" href="#" target="_self">En</a>
+          <a class="header__lang-link lang__active_en" href="#" target="_self">En</a>
         </li>
       </ul>
     </header>
@@ -50,7 +54,7 @@
           <li>Часовых поясов <span class="intro__list-count">11</span></li>
           <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-count">12</span></li>
           <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-count">16</span></li>
-          <li>Пририодных заповедников <span class="intro__list-count">105</span></li>
+          <li>Природных заповедников <span class="intro__list-count">105</span></li>
           <li>Аэропортов <span class="intro__list-count">241</span></li>
         </ul>
       </section>
@@ -79,18 +83,18 @@
             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img src="images/place-kosa.jpg" alt="куршская коса" class="place__image">
-          <ul class="place__paragraph">
-            <li class="place__paragraph-text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+          <div class="place__paragraph">
+            <p class="place__paragraph-text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта &#8212; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
               моря с другой. Уникальная природная зона на краю российского анклава.
-            </li>
-            <li class="place__paragraph-text">
+            </p>
+            <p class="place__paragraph-text">
               На этом Калининградская область не заканчивается. Для путешественника и
               исследователя там же по соседству &#8212; самая западная точка России, Балтийская коса, &#8212; и немецкое
               наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
               спокойствие природы и запах стального, прохладного моря.
-            </li>
-          </ul>
+            </p>
+          </div>
         </article>
 
         <article class="place">
@@ -101,20 +105,20 @@
               Geographic</a>
           </div>
           <img src="images/place-kolsky.jpg" alt="горы в снегу" class="place__image">
-          <ul class="place__paragraph">
-            <li class="place__paragraph-text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+          <div class="place__paragraph">
+            <p class="place__paragraph-text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
               которой на юг &#8212;
               тайга, а на север &#8212; Ледовитый океан, прикидывающийся Баренцевым морем.
-            </li>
-            <li class="place__paragraph-text">Возможно, вы смотрели Звягинцева и даже слышали историю
+            </p>
+            <p class="place__paragraph-text">Возможно, вы смотрели Звягинцева и даже слышали историю
               арктического
               фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
               уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
               скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние
               начинает сбываться с билетом
               в Мурманск.
-            </li>
-          </ul>
+            </p>
+          </div>
         </article>
 
         <article class="place">
@@ -124,18 +128,18 @@
             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <img src="images/place-altai.jpg" alt="ноутбук на фоне леса" class="place__image">
-          <ul class="place__paragraph">
-            <li class="place__paragraph-text">Алтай — одно из красивейших мест в России.
+          <div class="place__paragraph">
+            <p class="place__paragraph-text">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
               горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
               чудом здешних мест &#8212; горным воздухом.
-            </li>
-            <li class="place__paragraph-text">
+            </p>
+            <p class="place__paragraph-text">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
               разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
               равнинах пасутся косули. И знаменитые манулы &#8212; тоже обитатели Алтайского края.
-            </li>
-          </ul>
+            </p>
+          </div>
         </article>
 
         <article class="place">
@@ -145,18 +149,18 @@
             <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img src="images/place-winter-baikal.jpg" alt="лед Байкала" class="place__image">
-          <ul class="place__paragraph">
-            <li class="place__paragraph-text">
+          <div class="place__paragraph">
+            <p class="place__paragraph-text">
               Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
-              мест в России.</li>
-            <li class="place__paragraph-text">
+              мест в России.</p>
+            <p class="place__paragraph-text">
               Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это
               такой вид спорта, когда лыжник привязывает себя
               к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
               фестивале «Байкальская миля» был поставлен мировой рекорд &#8212; 197.011 км/ч.
-            </li>
-          </ul>
+            </p>
+          </div>
         </article>
 
         <article class="place">
@@ -166,16 +170,16 @@
             <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img src="images/place-karelia.jpg" alt="река в Карелии" class="place__image">
-          <ul class="place__paragraph">
-            <li class="place__paragraph-text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+          <div class="place__paragraph">
+            <p class="place__paragraph-text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров &#8212;
               леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
               соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
               чем увидал его Иван Грозный.
               В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
-            </li>
-          </ul>
+            </p>
+          </div>
         </article>
       </section>
 
