--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 <!-- Спасибо за комментарии! -->
 
 
-
 <body class="body">
   <div class="page">
     <header class="header">
       <img class="header__logo" src="images/header-logo.svg" alt="иконка с картой России">
       <ul class="header__lang-links">
         <li class="header__lang-name">
-          <a class="header__lang-link header__lang-link_active_ru" href="#" target="_self">Ru</a>
+          <a class="lang-link lang-link_active_ru" href="#" target="_self">Ru</a>
         </li>
         <li class="header__lang-name">
-          <a class="header__lang-link header__lang-link_active_en" href="#" target="_self">En</a>
+          <a class="lang-link lang-link_active_en" href="#" target="_self">En</a>
         </li>
       </ul>
     </header>
